# rolf

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: gen_macos.yml  gen_macos_dist.yml  gen_windows.yml  main.yml
ci/: install-wezterm.bat  install-wezterm.ps1  sign_notarize_artifact  wezterm.lua  win-release.ps1
ci/win-scripts/: install-wezterm.ps1  wezterm.lua
etc/: config.jsonc.example
rolf-grid/: .gitignore  Cargo.toml
rolf-grid/src/: lib.rs  main.rs
rolf-parser/: Cargo.toml  README.md
rolf-parser/src/: main.rs  parser.rs
src/: .main.rs.rustfmt  config.rs  human_size.rs  line_edit.rs  main.rs  natural_sort.rs  os_abstract.rs  strmode.rs  tiff.rs  unix_users.rs
src/os_abstract/: linux.rs  macos.rs  unix.rs  windows.rs
