[package]
name = "rolf"
version = "0.1.0"
authors = ["Christopher Chang <chiggiechang@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.20" # Cross-platform terminal drawing
open = "1.7.0" # Cross-platform file opener
which = "4.1.0" # Cross-platform equivalent of Unix 'which'
image = "0.23.14" # For decoding images
libc = "0.2" # Obtain terminal width and height in pixels (on Linux)
tokio = { version = "1", features = ["rt-multi-thread"] } # To asynchronously load large images
base64 = "0.13" # To encode file names for the kitty graphics protocol
tempfile = "3.2" # To store image data in temporary files for kitty
chrono = "0.4" # To convert the Unix timestamp into a timezone-aware date

# All dependencies (but not this crate itself or any workspace member)
# will be compiled with -Copt-level=3 . This includes build dependencies.
[profile.dev.package."*"]
opt-level = 3
